Improved work with mysqlconnector lib

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         </plugins>
     </build>
 
+
     <dependencies>
         <dependency>
             <groupId>org.freemarker</groupId>
@@ -58,7 +59,11 @@
             <version>9.3.0.M0</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
     </dependencies>
 
 </project>
