--- a/pom.xml
+++ b/pom.xml
@@ -60,10 +60,11 @@
         </dependency>
 
         <dependency>
-            <groupId>com.googlecode.json-simple</groupId>
-            <artifactId>json-simple</artifactId>
-            <version>1.1.1</version>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20141113</version>
         </dependency>
+
 
         <dependency>
             <groupId>mysql</groupId>
